Remove Unused Database File Storage Code