@@ -135,7 +135,7 @@ public class CompanyGstService {
         try {
             repository.saveAll(entities);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to save gst for company [%s]", entities.get(0).getCompany().getId());
+            String errorMessage = String.format("Failed to save gst for company [%s]", entities.getFirst().getCompany().getId());
             throw new LnFException(errorMessage);
         }
     }
